<?xml version="1.0"?>
<package>
  <name>two_int_talker</name>
  <version>1.0.0</version>
  <description>The two int talker package</description>

  <maintainer email="mickael.trezzy@gmail.com">Mickael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>project1_solution</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>project1_solution</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    
  </export>
</package>
