<?xml version="1.0"?>
<package>
  <name>sum_publisher</name>
  <version>1.0.0</version>
  <description>Package subscribing to the topic 'two_ints', summing the two ints received and publishing the sum on the 'sum' topic</description>

  <maintainer email="mickael.trezzy@gmail.com">Mickael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    
  </export>
</package>